--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -27,5 +27,20 @@ jobs:
         with:
           name: zipped-artifact
           path: ${{ github.sha }}.zip
+  publish:
+    runs-on: ubuntu-latest
+    steps:
+      - name: create release
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.github_token }}
+        with:
+          tag_name: ${{ github.run_number }}
+          release_name: Release from ${{ github.run_number }}
+          body: New Release for ${{ github.sha }}. Release notes for documentation
+          draft: false
+          prerelease: false
+          
+            
           
       
