--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -29,8 +29,10 @@ jobs:
           path: ${{ github.sha }}.zip
   publish:
     runs-on: ubuntu-latest
+    needs: build
     steps:
       - name: create release
+        id: create-release
         uses: actions/create-release@v1
         env:
           GITHUB_TOKEN: ${{ secrets.github_token }}
@@ -40,6 +42,19 @@ jobs:
           body: New Release for ${{ github.sha }}. Release notes for documentation
           draft: false
           prerelease: false
+      - name: download artifact
+        uses: actions/download-artifact@v2
+        with:
+          name: zipped-artifact
+      - name: upload release asset
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.github_token }}
+        with:
+          upload_url: ${{ steps.create-release.outputs.upload_url }}
+          asset_path: ./${{ github.sha }}.zip
+          asset_name: source_code_with_libraries.zip
+          asset_content_type: application/zip
           
             
           
