--- a/.github/workflows/deploy-pipeline.yaml
+++ b/.github/workflows/deploy-pipeline.yaml
@@ -44,3 +44,31 @@ jobs:
         with:
           name: zipped-bundle
           path: ${{ github.sha }}.zip
+  publish:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: create release
+        id: create-release
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.github_token }}
+        with:
+          tag_name: ${{ github.run_number }}
+          release_name: Release from ${{ github.run_number }}
+          body: New Release for ${{ github.sha }}. Release notes for documentation
+          draft: false
+          prerelease: false
+      - name: download artifact
+        uses: actions/download-artifact@v2
+        with:
+          name: zipped-artifact
+      - name: upload release asset
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.github_token }}
+        with:
+          upload_url: ${{ steps.create-release.outputs.upload_url }}
+          asset_path: ./${{ github.sha }}.zip
+          asset_name: source_code_with_libraries.zip
+          asset_content_type: application/zip
