--- a/.github/workflows/deploy-pipeline.yaml
+++ b/.github/workflows/deploy-pipeline.yaml
@@ -62,7 +62,7 @@ jobs:
       - name: download artifact
         uses: actions/download-artifact@v2
         with:
-          name: zipped-artifact
+          name: zipped-bundle
       - name: upload release asset
         uses: actions/upload-release-asset@v1
         env:
