--- a/.github/workflows/aws.yaml
+++ b/.github/workflows/aws.yaml
@@ -25,6 +25,7 @@ jobs:
             flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
   build:
     runs-on: ubuntu-latest
+    needs: lint
     steps:
       - name: checkout
         uses: actions/checkout@v2
