--- a/.github/workflows/aws.yaml
+++ b/.github/workflows/aws.yaml
@@ -63,9 +63,30 @@ jobs:
           aws-region: us-east-1
       - name: Upload to s3
         run: aws s3 cp ${{ github.sha }}.zip s3://githubactions2022wertfg/${{ github.sha }}.zip
-  deploy:
+  test:
     runs-on: ubuntu-latest
     needs: publishtos3
+    steps:
+      - name: Configure AWS cli
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: us-east-1
+      - name: Create test lambda function this is to create test env to execute functional tests
+        run: |
+            aws lambda create-function --function-name test-function \
+            --code S3Bucket=githubactions2022wertfg,S3Key=${{ github.sha }}.zip \
+            --handler lambda_function.lambda_handler --runtime python3.8 \
+            --role arn:aws:iam::${{ secrets.AWS_ACCOUNT_ID }}:role/my-lambda-role
+      - name: Wait 30 seconds In this step we will run functional tests as test env is created
+        run: sleep 30
+      - name: Destros test lambda function that is test env if always is used as we always want to destry the env even if previous step fails
+        if: ${{ always() }}
+        run: aws lambda delete-function --function-name test-function
+  deploy:
+    runs-on: ubuntu-latest
+    needs: test
     steps:
       - name: Configure AWS cli
         uses: aws-actions/configure-aws-credentials@v1
